--- a/simple-springboot-app/pom.xml
+++ b/simple-springboot-app/pom.xml
@@ -11,11 +11,17 @@
 
 	<description>Demo project for Spring Boot</description>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.2.RELEASE</version>
-	</parent>
+	<dependencyManagement>
+	    <dependencies>
+	        <dependency>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-starter-parent</artifactId>
+	            <version>1.3.2.RELEASE</version>
+	            <scope>import</scope>
+	            <type>pom</type>
+	        </dependency>   
+	    </dependencies>
+	</dependencyManagement>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
