--- a/simple-springboot-app/pom.xml
+++ b/simple-springboot-app/pom.xml
@@ -11,15 +11,13 @@
 
 	<description>Demo project for Spring Boot</description>
 
-	<dependencyManagement>
-	    <dependencies>
-	        <dependency>
-	            <groupId>org.springframework.boot</groupId>
-	            <artifactId>spring-boot-starter-parent</artifactId>
-	            <version>1.3.2.RELEASE</version>
-	            <scope>import</scope>
-	            <type>pom</type>
-	        </dependency>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.1.5</version>
+	</parent>
+
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -38,8 +36,7 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-	    </dependencies>
-	</dependencyManagement>
+	</dependencies>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
