--- a/simple-springboot-app/pom.xml
+++ b/simple-springboot-app/pom.xml
@@ -12,9 +12,12 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.5</version>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-parent</artifactId>
+			<version>3.1.5</version>
+			<type>pom</type>
+		</dependency>
 	</parent>
 
 	<dependencies>
